# neuro-gaming

./: .editorconfig  .gitattributes  .gitignore  CODE_REVIEW_TASKS_PL.md  README.md  buildozer.spec  main.py  neuro_gaming.kv  neuro_gaming.spec  pyproject.toml  requirements.txt  run_neuro_gaming.bat  settings.json
.github/workflows/: build-apk.yml  tests.yml
src/: __init__.py  calibration_profiles.py  data_models.py  game_controller.py  muse_connector.py  session_health.py  session_recorder.py  session_replay.py  settings.py  signal_processor.py  single_instance.py
tests/: test_calibration_profiles.py  test_core.py  test_known_devices.py  test_muse_connection_resilience.py  test_muse_connector_logging.py  test_muse_parser.py  test_muse_stream_parsers.py  test_session_health.py  test_session_recorder.py  test_session_replay.py  test_settings.py  test_single_instance.py
