[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-gaming"
version = "1.2.0"
description = "NeuroGaming app for Muse EEG driven controls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NeuroGaming Team" }]
dependencies = [
  "bleak>=0.22",
  "kivy>=2.3.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
